*** Changelog ***

= 7.3.1 - 2023-xx-xx =
* Fix - Add Order Key Validation

= 7.3.0 - 2023-04-12 =
* Fix - The payment requests are updated when product add-ons are changed (Product Add-ons extension).
* Add - Support eMandates for recurring payments made in INR

= 7.2.0 - 2023-03-09 =
* Fix - Hide PRB box in checkout block when PRBs disabled.
* Fix - Fix semi-hidden modal inline notices.

= 7.1.0 - 2023-02-08 =
* Fix - Replace some post meta methods with equivalent methods compatible with HPOS.
* Fix - Rare cases of payment processing failing when webhooks arrive before customer is redirected when UPE is enabled will no longer occur.
* Tweak - Update minimum supported versions for WordPress, WooCommerce, and PHP.
* Update – Declare this plugin compatible with High-Performance Order Storage (HPOS).

= 7.0.2 - 2023-01-11 =
* Fix - Expand charges object from incoming webhooks using Stripe API version 2022-11-15.
* Fix - Expand refunds on charge object from incoming webhooks using Stripe API version 2022-11-15.
* Fix - Fix critical error on PHP 8+ when php_uname() is disabled

= 7.0.1 - 2022-11-11 =
* Fix - Issue where subscription renewal payments were being charged twice no longer present.

= 7.0.0 - 2022-11-10 =
* Add - Update Express Checkout section UI.
* Add - Auto-complete first and last name on checkout form when using Link payment method.
* Add - Allow subscription orders to be paid with Link payment method.
* Add - Add inbox notification for Link payment method.
* Tweak - Adjust texts and links in WC admin advanced settings.
* Add - Restrict the Link payment method only for US merchants.

= 6.9.0 - 2022-10-19 =
* Tweak - Remove remaining traces of old Stripe settings.
* Add - Add Boleto expiration setting.
* Add - Declare incompatibility with HPOS.

= 6.8.0 - 2022-09-28 =
* Fix - Minor adjustments for Custom Order Tables compatibility.
* Fix - Upgrade from Payment Element beta.

= 6.7.0 - 2022-09-06 =