@@ -362,7 +362,11 @@ class WC_Stripe_Helper {
 	 * @return string
 	 */
 	public static function get_webhook_url() {
-		return add_query_arg( 'wc-api', 'wc_stripe', trailingslashit( get_home_url() ) );
+		return wp_sanitize_redirect(
+			esc_url_raw(
+				add_query_arg( 'wc-api', 'wc_stripe', trailingslashit( get_home_url() ) )
+			)
+		);
 	}
 
 	/**
