@@ -1,7 +1,8 @@
 *** Changelog ***
 
 = 7.3.1 - 2023-xx-xx =
-* Fix - Add Order Key Validation
+* Fix - Add Order Key Validation.
+* Fix - Add sanitization and escaping some outputs.
 
 = 7.3.0 - 2023-04-12 =
 * Fix - The payment requests are updated when product add-ons are changed (Product Add-ons extension).
